# aienergy_simulation

./: .gitignore  1B_queries_energy_consumption_reasoning.csv  1B_queries_energy_consumption_short.csv  LICENSE  README.md  model_throughput_DB.csv  pyproject.toml  sensitivity_PU_proportionality_long_queries.py  sensitivity_PU_proportionality_traditional_queries.py  sensitivity_linput_long_queries.py  sensitivity_linput_standard_queries.py  simulation_1B_long_queries.py  simulation_1B_queries_aggregated.py  simulation_1B_traditional_queries.py  simulation_long_queries.py  simulation_traditional_queries.py  simulation_traditional_queries_extreme.py  simulation_traditional_queries_extreme_pue.py  simulation_traditional_queries_input.py  simulation_traditional_queries_only_fig1_extreme.py  simulation_traditional_queries_output.py
