[project]
name = "copilot-inference-analysis"
version = "0.1.0"
description = "Analysis scripts supporting the Joule manuscript 'Energy Use of AI Inference, Efficiency Pathways, and Test-Time Scaling'."
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "matplotlib==3.9.4",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
]

[tool.uv]
package = false
